all pets fetch done

--- a/index.html
+++ b/index.html
@@ -151,7 +151,28 @@
           page when looking at its layout. The point of using Lorem Ipsum is
           that it has a.
         </p>
+        <!-- categories button -->
+        <div
+          id="category-button"
+          class="grid md:grid-cols-2 lg:grid-cols-4 gap-5"
+        ></div>
+        <div class="flex justify-between my-11">
+          <h3 class="font-extrabold text-xl text-dark1">Best Deal For you</h3>
+          <button class="btn bg-primary text-white font-bold text-lg">
+            Sort by Price
+          </button>
+        </div>
+      </section>
+      <!-- All pets -->
+      <section class="grid grid-cols-4 gap-5">
+        <div
+          id="pets-container"
+          class="col-span-3 grid grid-cols-3 gap-5"
+        ></div>
+        <div class="grid grid-cols-2 gap-5"></div>
       </section>
     </main>
+
+    <script src="./js/index.js"></script>
   </body>
 </html>
