--- a/index.html
+++ b/index.html
@@ -172,8 +172,13 @@
           </button>
         </div>
       </section>
+      <!-- loading spin -->
+      <div id="loading-spin" class="text-center"></div>
       <!-- All pets -->
-      <section class="grid md:grid-cols-3 lg:grid-cols-4 gap-5">
+      <section
+        id="all-pet-container"
+        class="grid md:grid-cols-3 lg:grid-cols-4 gap-5"
+      >
         <div
           id="pets-container"
           class="lg:col-span-3 md:col-span-2 grid lg:grid-cols-3 md:grid-cols-2 gap-5"
@@ -183,6 +188,20 @@
         </div>
       </section>
     </main>
+    <!-- Open the modal using ID.showModal() method -->
+    <dialog id="my-modal" class="modal modal-bottom sm:modal-middle">
+      <div class="modal-box flex flex-col items-center">
+        <div id="modal-container"></div>
+        <div class="modal-action">
+          <form method="dialog">
+            <!-- if there is a button in form, it will close the modal -->
+            <button class="btn text-primary bg-primary2 border-primary1">
+              Cancel
+            </button>
+          </form>
+        </div>
+      </div>
+    </dialog>
     <footer class="bg-dark1 text-neutral-content p-10">
       <div class="container mx-auto footer place-items-center">
         <nav>
