--- a/index.html
+++ b/index.html
@@ -202,6 +202,23 @@
         </div>
       </div>
     </dialog>
+    <!-- Open the modal using ID.showModal() method -->
+    <dialog id="my-modal2" class="modal modal-bottom sm:modal-middle">
+      <div class="modal-box flex flex-col items-center">
+        <div id="modal-container2" class="flex flex-col items-center"></div>
+        <div class="modal-action">
+          <form method="dialog">
+            <!-- if there is a button in form, it will close the modal -->
+            <button
+              id="btn-modal2"
+              class="btn text-primary bg-primary2 border-primary1 hidden"
+            >
+              Cancel
+            </button>
+          </form>
+        </div>
+      </div>
+    </dialog>
     <footer class="bg-dark1 text-neutral-content p-10">
       <div class="container mx-auto footer place-items-center">
         <nav>
