sort by price function added

--- a/index.html
+++ b/index.html
@@ -167,7 +167,10 @@
         ></div>
         <div class="flex justify-between my-11">
           <h3 class="font-extrabold text-xl text-dark1">Best Deal For you</h3>
-          <button class="btn bg-primary text-white font-bold text-lg">
+          <button
+            onclick="loadPetsForSort()"
+            class="btn bg-primary text-white font-bold text-lg"
+          >
             Sort by Price
           </button>
         </div>
