--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Peddy</title>
+    <title>Furry Friends</title>
     <!-- google font -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -90,7 +90,7 @@
             </div>
             <div class="btn btn-ghost hover:bg-primary1 hover:border-primary">
               <i class="fa-solid fa-paw text-primary text-2xl"></i>
-              <a class="text-3xl font-extrabold">Peddy</a>
+              <a class="text-3xl font-extrabold">Furry Friends</a>
             </div>
           </div>
           <div class="navbar-center hidden lg:flex">
@@ -228,7 +228,7 @@
           <h6 class="pb-6">
             <div>
               <i class="fa-solid fa-paw text-primary text-2xl"></i>
-              <a class="text-3xl font-extrabold text-white">Peddy</a>
+              <a class="text-3xl font-extrabold text-white">Furry Friends</a>
             </div>
           </h6>
           <a class="link link-hover"
